<resources>
    <string name="app_name">Game 2048</string>
    <string name="item">item</string>
    <string name="counter_start">0</string>
    <string name="undo">Undo</string>
    <string name="default_user">user: 2048</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="score">SCORE</string>
    <string name="initial_score">0</string>
    <string name="best">BEST</string>
    <string name="restart">Restart</string>
    <string name="string_2048">2048</string>
    <string name="back">Back</string>
    <string name="play">Play</string>
    <string name="scores">Scores</string>
    <string name="this_is_a_test">This is a test</string>
    <string name="score_title">Score:</string>
    <string name="player_title">Player:</string>
    <string name="next_arrow">Next arrow</string>
    <string name="player">PLAYER</string>
    <string name="snebot">snebot</string>
    <string name="score_details">Score details</string>
    <string name="date">DATE</string>
    <string name="date_default">4/20</string>
    <string name="player_search">Player</string>
    <string name="score_search">Score</string>
    <string name="score_search_term_initial">=</string>
    <string name="detail_edit">Edit</string>
    <string name="detail_done">Save</string>
</resources>