<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9e2dd">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:text="@string/string_2048"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/score_counter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/score_counter"
            style="@style/counter"
            android:layout_marginEnd="10sp"
            app:layout_constraintRight_toLeftOf="@id/best_counter"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/counter_title"
                android:text="@string/score" />

            <TextView
                style="@style/counter_number"
                android:text="@string/initial_score" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/best_counter"
            style="@style/counter"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/counter_title"
                android:text="@string/best" />

            <TextView
                style="@style/counter_number"
                android:text="@string/initial_score" />
        </LinearLayout>

        <Button
            style="@style/rounded_corner.button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20sp"
            android:text="@string/new_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/score_counter"
            app:layout_constraintRight_toRightOf="@id/best_counter"
            app:layout_constraintTop_toBottomOf="@id/score_counter" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>