<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".scores.ScoresActivity">

    <TextView
        android:id="@+id/scores_title"
        style="@style/game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_default"
        android:paddingHorizontal="@dimen/margin_default"
        android:text="@string/scores" />

    <View
        android:id="@+id/scores_separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:layout_below="@id/scores_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@color/game_color" />

    <EditText
        android:id="@+id/player_search"
        style="@style/rounded_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scores_separator"
        android:layout_alignParentStart="true"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_toStartOf="@id/search_button"
        android:backgroundTint="@color/grey_background"
        android:hint="@string/player_search"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/margin_small"
        android:paddingHorizontal="10sp" />

    <EditText
        android:id="@+id/score_search"
        style="@style/rounded_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_search"
        android:layout_alignParentStart="true"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_toStartOf="@id/score_search_condition"
        android:backgroundTint="@color/grey_background"
        android:hint="@string/score_search"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="@dimen/margin_small"
        android:paddingHorizontal="10sp" />

    <com.serafinebot.dint.game_2048.view.ButtonCycle
        android:id="@+id/score_search_condition"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_search"
        android:layout_alignBottom="@id/score_search"
        android:layout_toStartOf="@id/search_button"
        android:background="@android:color/transparent"
        android:includeFontPadding="false"
        android:onClick="scoreSearchConditionPressed"
        android:text="@string/score_search_term_initial"
        android:textColor="@color/game_color"
        android:textSize="30sp" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scores_separator"
        android:layout_alignBottom="@id/score_search"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:foreground="@drawable/search_white"
        android:foregroundGravity="center"
        android:foregroundTint="@color/game_color"
        android:includeFontPadding="false"
        android:onClick="searchPressed" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/score_search"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="@dimen/margin_default" />

</RelativeLayout>